@@ -47,7 +47,8 @@ AT_CHECK([if m4_default([$3], [false]); then
 
 AT_XFAIL_IF([m4_default([$4], [false])])
 
-cp $abs_srcdir/$1.stdout expout
+filename=`basename $1`;
+cp "$abs_srcdir/$filename.stdout" expout;
 
 # Update version in expout to avoid regenerating stdout files at each commit
 package_version=$ROBOPTIMCORE_VERSION
@@ -55,6 +56,8 @@ sed -i \
 -e "s/^\# Generated by RobOptim core library .*$/# Generated by RobOptim core library $package_version/" \
 expout
 
+echo $PATH
+echo $PYTHONPATH
 TESTCASE=`which $1`
 echo "$at_srcdir/AT_LINE: $CHECK_PREFIX $TESTCASE"
 AT_CHECK([$CHECK_PREFIX $TESTCASE], [0], [expout], [ignore])
