@@ -62,6 +62,8 @@ PACKAGE_M4_IN=$(top_srcdir)/tests/package.m4.in
 # Define m4 dependencies.
 TESTSUITE_AT = $(top_srcdir)/build-aux/autotest.at
 
+TESTSUITEDIR ?= '$(top_builddir)/tests'
+
 
 # ----- #
 # RULES #
@@ -80,7 +82,7 @@ clean-local:
 $(TESTSUITE): $(PACKAGE_M4_IN) $(srcdir)/testsuite.at $(TESTSUITE_AT) \
 	      $(top_srcdir)/configure
 	$(AUTOTEST) -I'$(srcdir)' -I'$(top_srcdir)/build-aux' \
-	-I'$(top_builddir)/tests' $@.at -o $@.tmp
+	-I$(TESTSUITEDIR) $@.at -o $@.tmp
 	mv $@.tmp $@
 
 atconfig: $(top_builddir)/config.status
